a1/brendan_gordon/TEST_PROGRAMS/invalidtype/mathieu_boucher/invalidtype2.min
#string in if statment

var x : string;

if x then
	x = "hello";
endif

